consolidate redundant compiler flags in cmake
Remove compiler flags that are already included by -Wall -Wextra:

    -Wformat
    -Wrestrict

Remove compiler/linker flags that are already enabled by default:

    -Wnull-dereference
    -Wl,-z,noexecstack

Remove wholly unnecessary compiler/linker flags:

    -Wtrampolines
        project does not define nested functions
    -Wl,-z,defs
        project does not build *.so files

Also, fix -fhardened detection for gcc, which was apparently broken!

Sidenote: -Wimplicit-fallthrough is enabled by -Wall under gcc but not
by -Wall -Wextra under clang. Since we have to do something conditional
here regardless, we now conditionally use -Wimplicit-fallthrough=5,
which at least makes the juice worth the squeeze (so to speak).

Finally, set CMAKE_COMPILE_WARNING_AS_ERROR (aka -Werror) under CI, such
that compiler warnings manifest as a merge-blocking build failure.

This is a bit brittle because we do not currently pin the CI toolchain,
but in exchange for this brittleness, we prevent compiler warnings from
sneaking into the main branch via CI jobs that spuriously pass, despite
the presence of (otherwise non-fatal) warnings.

As an added bonus, this change allows us to remove -Werror=* flags from
CMakeLists.txt, as -Werror supercedes all individual -Werror=* options.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ build:gcc:
   <<: *build_dependencies
   stage: build
   script:
-    - cmake --preset default
+    - cmake --preset default -DCMAKE_COMPILE_WARNING_AS_ERROR=ON
     - cmake --build --preset default
     - ctest --preset default -E ${TESTS_FAIL_LACK_OF_LANDLOCK_API_IN_CI_RUNNERS}
   artifacts:
@@ -26,7 +26,7 @@ build:clang:
   <<: *build_dependencies
   stage: build
   script:
-    - cmake --preset clang
+    - cmake --preset clang -DCMAKE_COMPILE_WARNING_AS_ERROR=ON
     - cmake --build --preset default
     - ctest --preset default -E ${TESTS_FAIL_LACK_OF_LANDLOCK_API_IN_CI_RUNNERS}
   artifacts:
