add string_view for improved type safety
Introduce a simple struct akin to C++17's std::string_view, and convert
function signatures like:

    result_t call_js_foreach(const char *magic,
                             size_t magic_sz,
                             const char *code,
                             size_t code_sz,
                             char **args,
                             const size_t argc,
                             struct call_ops *ops,
                             void *userdata) WARN_UNUSED;

... into:

    result_t call_js_foreach(const struct string_view *magic,
                             const struct string_view *code,
                             char **args,
                             struct call_ops *ops,
                             void *userdata) WARN_UNUSED;

--- a/tests/fuzzer/CMakeLists.txt
+++ b/tests/fuzzer/CMakeLists.txt
@@ -1,7 +1,10 @@
 macro(add_fuzzer target)
 	add_executable(${target})
 	target_sources(${target} PRIVATE ${target}.c)
-	target_include_directories(${target} PRIVATE ${PROJECT_SOURCE_DIR}/src)
+	target_include_directories(${target} PRIVATE
+		${PROJECT_SOURCE_DIR}/tests # for coverage.h, test_macros.h, etc
+		${PROJECT_SOURCE_DIR}/src   # for debug.h, tmpfile.h, etc
+	)
 	target_link_libraries(${target} PRIVATE my_cflags youtube)
 	target_compile_options(${target} PRIVATE -g -O1 -fsanitize=fuzzer)
 	target_link_options(${target} PRIVATE -fsanitize=fuzzer)
@@ -9,11 +12,6 @@ endmacro()
 
 include(CheckSanitizer)
 
-# Any sanitizer seems to bring in the fuzzer symbols required to link and
-# thereby make check_c_compiler_flag() work as expected. Just use libasan.
-check_sanitizer(CFLAG_FUZZER -fsanitize=fuzzer asan)
-if (CFLAG_FUZZER)
-	add_fuzzer(parse_json)
-	add_fuzzer(find_js_deobfuscator)
-	add_fuzzer(call_js_foreach)
-endif (CFLAG_FUZZER)
+add_fuzzer(parse_json)
+add_fuzzer(find_js_deobfuscator)
+add_fuzzer(call_js_foreach)
