run vale on prose of comments and docs
Use Vale to check the spelling and grammar of English prose in the
project repo, including block comments in C code and documentation in
Markdown README files.

References:

- https://lwn.net/Articles/964075/
- https://news.ycombinator.com/item?id=42407250
- https://lobste.rs/s/rupea8/3_shell_scripts_improve_your_writing_my_ph

Restricting comments in code and internal-only docs with Vale would
probably never make sense in a real software project, especially one
with a large team of varying language backgrounds.

That said, a pedantic approach does no harm for a personal project like
this; at worst, I only shoot myself in the foot.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,6 +77,32 @@ build:clang-coverage:
         coverage_format: cobertura
         path: ./build/coverage.xml
 
+#
+# Based on https://gitlab.com/gitlab-ci-utils/container-images/vale
+#
+# Restricting comments in code and internal documentation with Vale would
+# probably never make sense in a real software project, especially one with
+# a large team of varying language backgrounds.
+#
+# That said, a pedantic approach does no harm for a personal project
+# because at worst, I only shoot myself in the foot.
+#
+lint:prose:
+  stage: build
+  image:
+    name: registry.gitlab.com/gitlab-ci-utils/container-images/vale:latest
+    entrypoint: ['']
+  before_script:
+    - /vale/sync.sh
+  script:
+    - ./scripts/check-prose.sh /vale/vale-glcq.tmpl > vale.json
+  after_script:
+    - jq -r '.[].check_name' vale.json | sort | uniq -c | sort -nr
+  artifacts:
+    when: always
+    reports:
+      codequality: vale.json
+
 lint:shell:
   stage: build
   before_script:
