run vale on gitlab CI configuration
This is a small follow-up to 70f86424.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ build:clang-format:
 build:clang-coverage:
   <<: *build_dependencies
   stage: build
-  # Use medium machine type (instead of default small) to improve VM perf
+  # Use medium machine type (instead of default small) to improve VM performance
   tags:
     - saas-linux-medium-amd64
   variables:
