tighten static and const usage where possible
Tighten usage of the static and const keywords:

- make block-scope globals into local variables (remove static keyword)
- make file-level globals have internal linkage (add static keyword)
- make unnecessarily mutable function args immutable (add const keyword)
- make unnecessarily mutable global vars immutable (add const keyword)

Finally, refactor away mutable block-scope globals (i.e. non-const
static variables declared within function definitions) that stick out
like a sore thumb: GLOBAL_CURL_EASY_HANDLE, RESULT_HEAP.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: archlinux/archlinux:base-devel
 
 variables:
   PACKAGE_CMD: "pacman --noconfirm --needed -Sy"
-  PACKAGE_DEFAULT: "cmake clang curl duktape git jansson libseccomp pcre2"
+  PACKAGE_DEFAULT: "ada cmake clang curl duktape git jansson libseccomp pcre2"
   PACKAGE_PER_JOB: ""
   TESTS_FAIL_LACK_OF_LANDLOCK_API_IN_CI_RUNNERS: "^(cli-try-sandbox|cli-valid-args-invalid-hostname|landlock|sandbox|seccomp)$"
 
@@ -76,6 +76,13 @@ build:clang-coverage:
       coverage_report:
         coverage_format: cobertura
         path: ./build/coverage.xml
+
+lint:global-variables:
+  stage: build
+  before_script:
+    - ${PACKAGE_CMD} ctags jq
+  script:
+    - ./scripts/check-global-variables.sh
 
 #
 # Based on https://gitlab.com/gitlab-ci-utils/container-images/vale
