increase write.c code coverage
In particular, add a negative test for write_with_retry() errors.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -53,6 +53,7 @@ register_test(js)
 register_test(re)
 register_test(result)
 register_test(sandbox "ASAN_OPTIONS=detect_leaks=0")
+register_test(write_wrapper)
 register_test(youtube)
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
 	register_test(landlock)
