fix vale spellcheck under new version 3.9.4

--- a/.vale.ini
+++ b/.vale.ini
@@ -3,7 +3,7 @@ MinAlertLevel = suggestion
 Vocab = youtube-unthrottle
 Packages = proselint, Readability, write-good
 
-[*.{sh,exp}]
+[*.{sh,exp,yml}]
 BasedOnStyles = proselint, Readability, Vale, write-good
 proselint.Typography = NO
 Vale.Spelling = NO
