run static analysis tools under CI
Run clang-tidy and infer under GitLab CI, and fix any issues flagged by
these tools (mostly in test code, in this initial batch of changes).

We use infer's --no-liveness option to silence false positives caused by
scope guards that exist only for use by __attribute__((cleanup)).

We use clang-tidy's -bugprone-easily-swappable-parameters and
-clang-analyzer-security.insecureAPI.DeprecatedOrUnsafeBufferHandling
options to silence warnings that are not worth fixing at present.

Other static analyzers that were tested but didn't pan out:

- CPAchecker
- IKOS
- MOPSA
- RV-Match

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,3 +126,28 @@ lint:tcl:
     - tclfmt --in-place --indent=tab ./scripts/*.exp
     - git diff --exit-code ./scripts/*.exp
     - tclint ./scripts/*.exp
+
+#
+# Run the Clang Static Analyzer via clang-tidy: https://clang-analyzer.llvm.org
+#
+analyze:clang-tidy:
+  <<: *build_dependencies
+  stage: build
+  variables:
+    PACKAGE_PER_JOB: "jq"
+  script:
+    - cmake --preset clang -DCMAKE_EXPORT_COMPILE_COMMANDS=1
+    - cmake --build --preset default
+    - jq --raw-output0 .[].file ./build/compile_commands.json | xargs -0 clang-tidy -p ./build/
+
+#
+# Run the Infer static analyzer: https://fbinfer.com
+#
+analyze:fb-infer:
+  <<: *build_dependencies
+  stage: build
+  script:
+    - cmake --preset clang -DCMAKE_EXPORT_COMPILE_COMMANDS=1
+    - cmake --build --preset default
+    - curl -sSL https://github.com/facebook/infer/releases/download/v1.2.0/infer-linux-x86_64-v1.2.0.tar.xz | tar -C ./build/ -xJ
+    - ./build/infer-linux-x86_64-v1.2.0/bin/infer run
