--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -58,6 +58,8 @@ register_test(youtube)
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
 	register_test(landlock)
 	register_test(seccomp "ASAN_OPTIONS=detect_leaks=0")
-endif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
+elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+	register_test(seatbelt)
+endif ()
 
 generate_test_driver()
