reorganize project directory structure
The number of *.c and *.h files in src/ has grown enough to merit some
reorganization into subdirectories. For now, split the project like so:

  src/lib/
    wrappers for third-party libraries like curl and PCRE2
  src/sandbox/
    wrappers for platform-specific sandboxing APIs, like macOS Seatbelt
  src/sys/
    wrappers for system features, like OS and stdlib APIs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,48 +1,18 @@
 add_library(youtube)
+
+target_include_directories(youtube PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(youtube PRIVATE ${PROJECT_SOURCE_DIR}/src)
+target_link_libraries(youtube PRIVATE my_cflags)
+
+add_subdirectory(lib)
+add_subdirectory(sandbox)
+add_subdirectory(sys)
+
 target_sources(youtube PRIVATE
-	debug.c
-	js.c
-	re.c
 	result.c
 	sandbox.c
-	tmpfile.c
-	url.c
-	write.c
 	youtube.c
 )
-target_include_directories(youtube PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_link_libraries(youtube PRIVATE my_cflags)
-target_link_libraries(youtube PRIVATE
-	ada
-	curl
-	duktape
-	jansson
-	pcre2-8
-)
-
-if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
-	target_sources(youtube PRIVATE
-		landlock.c
-		seccomp.c
-	)
-	target_link_libraries(youtube PRIVATE
-		seccomp
-	)
-elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-	file(READ seatbelt_policy.scm SEATBELT_POLICY)
-	set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS
-		seatbelt_policy.scm
-	)
-
-	string(REPLACE "\n" "\\\\n" SEATBELT_POLICY "${SEATBELT_POLICY}")
-	string(REPLACE "\\\\" "\\" SEATBELT_POLICY_SCM "${SEATBELT_POLICY}")
-	configure_file(seatbelt_policy.c.in seatbelt_policy.c ESCAPE_QUOTES)
-
-	target_sources(youtube PRIVATE
-		seatbelt_policy.c
-		seatbelt.c
-	)
-endif ()
 
 if (CMAKE_BUILD_TYPE STREQUAL Debug)
 	message(STATUS "Enabling runtime debug output")
