fix build on openbsd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,5 +145,7 @@ endif (CMAKE_C_COMPILER_ID STREQUAL "Clang")
 if (CMAKE_SYSTEM_NAME STREQUAL "OpenBSD")
 	message(STATUS "Making sure to use /usr/local/{include,lib} on OpenBSD")
 	target_include_directories(youtube PUBLIC /usr/local/include)
+	target_include_directories(youtube-protocol PUBLIC /usr/local/include)
 	target_link_directories(youtube PUBLIC /usr/local/lib)
+	target_link_directories(youtube-protocol PUBLIC /usr/local/lib)
 endif (CMAKE_SYSTEM_NAME STREQUAL "OpenBSD")
