--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ build:clang-coverage:
     - export IMG=$((echo $BUMP && cat ./scripts/user-data) | sha256sum | cut -f1 -d' ')
     - export URI=$(./scripts/find-vm-artifact.sh "vm-images/$IMG.zst") && echo "Fetching $URI"
     - ./scripts/qemu-build.exp $IMG $URI
-    - ./scripts/coverage.sh -E main.c coverage.profraw ./build/coverage.xml
+    - ./scripts/coverage.sh -E 'main.c|build/' coverage.profraw ./build/coverage.xml
   after_script:
     - ./scripts/cleanup-vm-archive.sh vm-images
   coverage: '/^TOTAL.*\s+([\d\.]+\%)$/'
