--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -42,9 +42,10 @@ macro(generate_test_driver)
 		coverage.c
 	)
 	target_include_directories(test-driver PRIVATE
-		${CMAKE_CURRENT_SOURCE_DIR} # for coverage.h, test_macros.h, etc
-		${PROJECT_SOURCE_DIR}/src   # for debug.h, tmpfile.h, etc
-		${greatest_SOURCE_DIR}      # for greatest.h
+		${CMAKE_CURRENT_SOURCE_DIR}        # for coverage.h, etc
+		${PROJECT_SOURCE_DIR}/src          # for debug.h, tmpfile.h, etc
+		${greatest_SOURCE_DIR}             # for greatest.h
+		${PROJECT_BINARY_DIR}/src/protocol # for generated protobuf code
 	)
 	target_link_libraries(test-driver PRIVATE my_cflags sanitizers youtube)
 endmacro()
