--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -45,7 +45,7 @@ macro(generate_test_driver)
 		${CMAKE_CURRENT_SOURCE_DIR}        # for coverage.h, etc
 		${PROJECT_SOURCE_DIR}/src          # for debug.h, tmpfile.h, etc
 		${greatest_SOURCE_DIR}             # for greatest.h
-		${PROJECT_BINARY_DIR}/src/protocol # for generated protobuf code
+		${googlevideo_BINARY_DIR}          # for generated protobuf code
 	)
 	target_link_libraries(test-driver PRIVATE my_cflags sanitizers youtube)
 endmacro()
